[gd_scene load_steps=13 format=3 uid="uid://mkqstuts1rdm"]

[ext_resource type="Texture2D" uid="uid://bn8t8jmrkuvdk" path="res://Graphics/Icons/Time.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dcvnyb0mloli2" path="res://Graphics/GUI/Panel.png" id="3_ou1ny"]
[ext_resource type="Theme" uid="uid://cp2u1kgj60ic" path="res://Resources/default_theme.tres" id="4"]
[ext_resource type="Texture2D" uid="uid://baowebna7hgr5" path="res://Graphics/GUI/CloseButtonNormal.png" id="4_c1ogt"]
[ext_resource type="Texture2D" uid="uid://c1vwn7p5uxu1r" path="res://Graphics/GUI/CloseButtonHover.png" id="5_imc5e"]
[ext_resource type="Script" uid="uid://b7andbtcpnqdd" path="res://Scripts/ProductionPanel.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dhvuk53th48o1" path="res://Graphics/Materials/sand.png" id="7"]
[ext_resource type="Texture2D" uid="uid://bqcnfk18r8y88" path="res://Graphics/Materials/glass.png" id="8"]

[sub_resource type="SystemFont" id="SystemFont_l1il0"]
font_names = PackedStringArray("Arial")
subpixel_positioning = 0
multichannel_signed_distance_field = true

[sub_resource type="LabelSettings" id="LabelSettings_55eq0"]
font = SubResource("SystemFont_l1il0")
font_size = 20
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.372549)
shadow_offset = Vector2(2, 2)

[sub_resource type="InputEventKey" id="InputEventKey_abv8r"]
device = -1
physical_keycode = 71
unicode = 103

[sub_resource type="Shortcut" id="2"]
events = [SubResource("InputEventKey_abv8r")]

[node name="Background" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 32.0
offset_bottom = 32.0
theme = ExtResource("4")
script = ExtResource("6")

[node name="GUI" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 224.0
offset_right = 960.0
offset_bottom = 496.0
texture = ExtResource("3_ou1ny")
patch_margin_left = 408
patch_margin_top = 80
patch_margin_right = 80
patch_margin_bottom = 64
axis_stretch_horizontal = 1
metadata/_edit_horizontal_guides_ = [596.0]

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 894.0
offset_top = 240.0
offset_right = 943.0
offset_bottom = 289.0
texture_normal = ExtResource("4_c1ogt")
texture_hover = ExtResource("5_imc5e")

[node name="Title" type="Label" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 1
offset_left = 360.0
offset_top = 244.0
offset_right = 668.0
offset_bottom = 282.0
theme_override_font_sizes/font_size = 18
label_settings = SubResource("LabelSettings_55eq0")

[node name="NoRsrc" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 344.0
offset_top = 320.0
offset_right = 936.0
offset_bottom = 346.0
text = "NO_SAND"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Texture2D" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 612.0
offset_top = 384.0
offset_right = 652.0
offset_bottom = 420.0
texture = ExtResource("8")
expand_mode = 1
stretch_mode = 5

[node name="TimeTexture" type="TextureRect" parent="Control"]
layout_mode = 0
offset_left = 620.0
offset_top = 424.0
offset_right = 644.0
offset_bottom = 464.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 5

[node name="AmountProduced" type="Label" parent="Control"]
layout_mode = 0
offset_left = 664.0
offset_top = 392.0
offset_right = 760.0
offset_bottom = 416.0
text = "0 kg"
vertical_alignment = 1

[node name="TimeRemaining" type="Label" parent="Control"]
layout_mode = 0
offset_left = 664.0
offset_top = 432.0
offset_right = 760.0
offset_bottom = 456.0
text = "00:00"
vertical_alignment = 1

[node name="Expected" type="Label" parent="Control"]
layout_mode = 0
offset_left = 376.0
offset_top = 392.0
offset_right = 616.0
offset_bottom = 416.0

[node name="Start" type="Button" parent="Control"]
layout_mode = 1
offset_left = 796.0
offset_top = 436.0
offset_right = 936.0
offset_bottom = 472.0
shortcut = SubResource("2")
shortcut_in_tooltip = false
text = "START"

[node name="HBox" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 332.0
offset_right = 904.0
offset_bottom = 372.0
alignment = 1

[node name="HSlider" type="HSlider" parent="Control/HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="Control" type="Control" parent="Control/HBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Texture2D" type="TextureRect" parent="Control/HBox"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
texture = ExtResource("7")
expand_mode = 1
stretch_mode = 5

[node name="AmountInStorage" type="Label" parent="Control/HBox"]
layout_mode = 2
text = "0 kg"
vertical_alignment = 1

[node name="Remaining" type="Label" parent="Control/HBox"]
visible = false
layout_mode = 2
text = "REMAINING"

[node name="Control2" type="Control" parent="Control/HBox"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="Control/Start" to="." method="_on_start_pressed"]
[connection signal="value_changed" from="Control/HBox/HSlider" to="." method="_on_h_slider_value_changed"]
